# aegis-mcp

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  aegis-config.yaml  config.py  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
console/: Dockerfile  package-lock.json  package.json
console/app/: layout.tsx  page.tsx
guardrails/: allowlist_engine.py  risk_scorer.py  semantic_judge.py
hitl/: queue.py  webhook.py
scripts/: smoke_test.py
tests/: test_allowlist_engine.py  test_e2e.py  test_hitl_queue.py  test_risk_scorer.py  test_semantic_judge.py
